adding main utility to display the time for various places

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.world_time">
     <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="world_time"
+        android:label="WorldTime"
         android:icon="@mipmap/ic_launcher"
        android:usesCleartextTraffic="true">
         <activity
